assignment1/assignment1/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from e:\Dev\Coding\Project Folders\Python_VSCODE\BKIT ASSIGN\assignment1\assignment1\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'EndDo'", "'True'", "'False'", "'='", "'+'", "'+.'", 
                     "'-'", "'-.'", "'*'", "'*.'", "'\\'", "'\\.'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "':'", 
                     "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "ID", "BODY", "BREAK", "CONTINUE", "DO", 
                      "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "ENDDO", "TRUE", "FALSE", "ASSIGN", 
                      "PLUS", "PLUS_DOT", "MINUS", "MINUS_DOT", "STAR", 
                      "STAR_DOT", "DIV", "DIV_DOT", "MOD", "NOT", "AND", 
                      "OR", "EQUAL", "NOT_EQUAL", "LESS", "GREATER", "LESS_EQUAL", 
                      "GREATER_EQUAL", "EQUAL_DIV_EQUAL", "LESS_DOT", "GREATER_DOT", 
                      "LESS_EQUAL_DOT", "GREATER_EQUAL_DOT", "LEFT_PAREN", 
                      "RIGHT_PAREN", "LEFT_SQUARE", "RIGHT_SQUARE", "LEFT_CURLY", 
                      "RIGHT_CURLY", "SEMI", "COLON", "DOT", "COMMA", "WS", 
                      "BLOCK_COMMENT", "UNTERMINATED_COMMENT", "INT_LIT", 
                      "FLOAT_LIT", "STRING_LIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_variable_declaration_part = 1
    RULE_variable_declaration = 2
    RULE_declaration_list = 3
    RULE_initialization = 4
    RULE_variable = 5
    RULE_literal = 6
    RULE_function_declaration_part = 7
    RULE_function_declaration = 8
    RULE_function_name = 9
    RULE_function_parameter = 10
    RULE_parameter_list = 11
    RULE_function_body = 12
    RULE_statement_list = 13
    RULE_other_statements = 14
    RULE_assignment_statement = 15
    RULE_if_statement = 16
    RULE_for_statement = 17
    RULE_while_statement = 18
    RULE_do_while_statement = 19
    RULE_break_statement = 20
    RULE_continue_statement = 21
    RULE_call_statement = 22
    RULE_return_statement = 23
    RULE_expression_list = 24
    RULE_expression = 25
    RULE_rela_expr = 26
    RULE_logic_expr = 27
    RULE_add_expr = 28
    RULE_mul_expr = 29
    RULE_negation_expr = 30
    RULE_sign_expr = 31
    RULE_element_expr = 32
    RULE_func_expr = 33
    RULE_sub_expr = 34
    RULE_operative = 35
    RULE_array_element = 36
    RULE_index_op = 37
    RULE_function_call = 38
    RULE_sign_op = 39
    RULE_negation_op = 40
    RULE_multiplying_op = 41
    RULE_adding_op = 42
    RULE_logical_op = 43
    RULE_relational_op = 44
    RULE_bool_lit = 45
    RULE_array_lit = 46
    RULE_literal_list = 47

    ruleNames =  [ "program", "variable_declaration_part", "variable_declaration", 
                   "declaration_list", "initialization", "variable", "literal", 
                   "function_declaration_part", "function_declaration", 
                   "function_name", "function_parameter", "parameter_list", 
                   "function_body", "statement_list", "other_statements", 
                   "assignment_statement", "if_statement", "for_statement", 
                   "while_statement", "do_while_statement", "break_statement", 
                   "continue_statement", "call_statement", "return_statement", 
                   "expression_list", "expression", "rela_expr", "logic_expr", 
                   "add_expr", "mul_expr", "negation_expr", "sign_expr", 
                   "element_expr", "func_expr", "sub_expr", "operative", 
                   "array_element", "index_op", "function_call", "sign_op", 
                   "negation_op", "multiplying_op", "adding_op", "logical_op", 
                   "relational_op", "bool_lit", "array_lit", "literal_list" ]

    EOF = Token.EOF
    ID=1
    BODY=2
    BREAK=3
    CONTINUE=4
    DO=5
    ELSE=6
    ELSEIF=7
    ENDBODY=8
    ENDIF=9
    ENDFOR=10
    ENDWHILE=11
    FOR=12
    FUNCTION=13
    IF=14
    PARAMETER=15
    RETURN=16
    THEN=17
    VAR=18
    WHILE=19
    ENDDO=20
    TRUE=21
    FALSE=22
    ASSIGN=23
    PLUS=24
    PLUS_DOT=25
    MINUS=26
    MINUS_DOT=27
    STAR=28
    STAR_DOT=29
    DIV=30
    DIV_DOT=31
    MOD=32
    NOT=33
    AND=34
    OR=35
    EQUAL=36
    NOT_EQUAL=37
    LESS=38
    GREATER=39
    LESS_EQUAL=40
    GREATER_EQUAL=41
    EQUAL_DIV_EQUAL=42
    LESS_DOT=43
    GREATER_DOT=44
    LESS_EQUAL_DOT=45
    GREATER_EQUAL_DOT=46
    LEFT_PAREN=47
    RIGHT_PAREN=48
    LEFT_SQUARE=49
    RIGHT_SQUARE=50
    LEFT_CURLY=51
    RIGHT_CURLY=52
    SEMI=53
    COLON=54
    DOT=55
    COMMA=56
    WS=57
    BLOCK_COMMENT=58
    UNTERMINATED_COMMENT=59
    INT_LIT=60
    FLOAT_LIT=61
    STRING_LIT=62
    ILLEGAL_ESCAPE=63
    UNCLOSE_STRING=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration_part(self):
            return self.getTypedRuleContext(BKITParser.Variable_declaration_partContext,0)


        def function_declaration_part(self):
            return self.getTypedRuleContext(BKITParser.Function_declaration_partContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.variable_declaration_part()
            self.state = 97
            self.function_declaration_part()
            self.state = 98
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declaration_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_declaration_part




    def variable_declaration_part(self):

        localctx = BKITParser.Variable_declaration_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variable_declaration_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 100
                self.variable_declaration()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def declaration_list(self):
            return self.getTypedRuleContext(BKITParser.Declaration_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_declaration




    def variable_declaration(self):

        localctx = BKITParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BKITParser.VAR)
            self.state = 107
            self.match(BKITParser.COLON)
            self.state = 108
            self.declaration_list()
            self.state = 109
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initialization(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.InitializationContext)
            else:
                return self.getTypedRuleContext(BKITParser.InitializationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_declaration_list




    def declaration_list(self):

        localctx = BKITParser.Declaration_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.initialization()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 112
                self.match(BKITParser.COMMA)
                self.state = 113
                self.initialization()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_initialization




    def initialization(self):

        localctx = BKITParser.InitializationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_initialization)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.variable()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 120
                self.match(BKITParser.ASSIGN)
                self.state = 121
                self.literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LEFT_SQUARE(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LEFT_SQUARE)
            else:
                return self.getToken(BKITParser.LEFT_SQUARE, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def RIGHT_SQUARE(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RIGHT_SQUARE)
            else:
                return self.getToken(BKITParser.RIGHT_SQUARE, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(BKITParser.ID)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LEFT_SQUARE:
                self.state = 125
                self.match(BKITParser.LEFT_SQUARE)
                self.state = 126
                self.match(BKITParser.INT_LIT)
                self.state = 127
                self.match(BKITParser.RIGHT_SQUARE)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_lit(self):
            return self.getTypedRuleContext(BKITParser.Bool_litContext,0)


        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def array_lit(self):
            return self.getTypedRuleContext(BKITParser.Array_litContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.TRUE, BKITParser.FALSE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.bool_lit()
                pass
            elif token in [BKITParser.INT_LIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(BKITParser.INT_LIT)
                pass
            elif token in [BKITParser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(BKITParser.FLOAT_LIT)
                pass
            elif token in [BKITParser.STRING_LIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.match(BKITParser.STRING_LIT)
                pass
            elif token in [BKITParser.LEFT_CURLY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.array_lit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declaration_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_function_declaration_part




    def function_declaration_part(self):

        localctx = BKITParser.Function_declaration_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_declaration_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 140
                self.function_declaration()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_name(self):
            return self.getTypedRuleContext(BKITParser.Function_nameContext,0)


        def function_body(self):
            return self.getTypedRuleContext(BKITParser.Function_bodyContext,0)


        def function_parameter(self):
            return self.getTypedRuleContext(BKITParser.Function_parameterContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_function_declaration




    def function_declaration(self):

        localctx = BKITParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.function_name()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 147
                self.function_parameter()


            self.state = 150
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_function_name




    def function_name(self):

        localctx = BKITParser.Function_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(BKITParser.FUNCTION)
            self.state = 153
            self.match(BKITParser.COLON)
            self.state = 154
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(BKITParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_function_parameter




    def function_parameter(self):

        localctx = BKITParser.Function_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(BKITParser.PARAMETER)
            self.state = 157
            self.match(BKITParser.COLON)
            self.state = 158
            self.parameter_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_parameter_list




    def parameter_list(self):

        localctx = BKITParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.variable()
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 161
                self.match(BKITParser.COMMA)
                self.state = 162
                self.variable()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def statement_list(self):
            return self.getTypedRuleContext(BKITParser.Statement_listContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_function_body




    def function_body(self):

        localctx = BKITParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_function_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(BKITParser.BODY)
            self.state = 169
            self.match(BKITParser.COLON)
            self.state = 170
            self.statement_list()
            self.state = 171
            self.match(BKITParser.ENDBODY)
            self.state = 172
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration_part(self):
            return self.getTypedRuleContext(BKITParser.Variable_declaration_partContext,0)


        def other_statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Other_statementsContext)
            else:
                return self.getTypedRuleContext(BKITParser.Other_statementsContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_statement_list




    def statement_list(self):

        localctx = BKITParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_statement_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.variable_declaration_part()
            self.state = 178
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 175
                    self.other_statements() 
                self.state = 180
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Other_statementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BKITParser.RULE_other_statements

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class While_stmtContext(Other_statementsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BKITParser.Other_statementsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_statement(self):
            return self.getTypedRuleContext(BKITParser.While_statementContext,0)



    class Conti_stmtContext(Other_statementsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BKITParser.Other_statementsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def continue_statement(self):
            return self.getTypedRuleContext(BKITParser.Continue_statementContext,0)



    class If_stmtContext(Other_statementsContext):
